test/scc/expr/semantic-errors/059.a
059.t:4:11: error: expression must have integral type